opam-version: "2.0"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/mrmime"
bug-reports:  "https://github.com/mirage/mrmime/issues"
dev-repo:     "git+https://github.com/mirage/mrmime.git"
doc:          "https://mirage.github.io/mrmime/"
license:      "MIT"
synopsis:     "Mr. MIME"
description:  """Parser and generator of mail in OCaml"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"            {>= "4.08.0"}
  "dune"             {>= "1.2"}
  "rresult"
  "fmt"
  "ke"               {>= "0.4"}
  "unstrctrd"        {>= "0.2"}
  "ptime"
  "uutf"
  "rosetta"          {>= "0.3.0"}
  "ipaddr"
  "emile"            {>= "1.0"}
  "base64"           {>= "3.1.0"}
  "pecu"             {>= "0.5"}
  "prettym"
  "bigstringaf"
  "bigarray-compat"
  "bigarray-overlap" {>= "0.2.0"}
  "angstrom"         {>= "0.14.0"}
  "hxd"              {with-test}
  "alcotest"         {with-test}
  "jsonm"            {with-test}
  "crowbar"          {with-test}
]
