opam-version: "2.0"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/mrmime"
bug-reports:  "https://github.com/mirage/mrmime/issues"
dev-repo:     "git+https://github.com/mirage/mrmime.git"
doc:          "https://mirage.github.io/mrmime/"
license:      "MIT"
synopsis:     "Mr. MIME"
description:  """Parser and generator of mail in OCaml"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"            {>= "4.08.0"}
  "dune"             {>= "2.7"}
  "rresult"
  "fmt"              {>= "0.8.7"}
  "ke"               {>= "0.4"}
  "unstrctrd"        {>= "0.2"}
  "ptime"            {>= "0.8.2"}
  "uutf"
  "rosetta"          {>= "0.3.0"}
  "ipaddr"
  "emile"            {>= "1.0"}
  "base64"           {>= "3.1.0"}
  "pecu"             {>= "0.5"}
  "prettym"
  "bigstringaf"      {>= "0.5.0"}
  "bigarray-compat"
  "bigarray-overlap" {>= "0.2.0"}
  "angstrom"         {>= "0.14.0"}
  "cmdliner"
  "fpath"
  "hxd"
  "mirage-crypto-rng"
  "ocplib-endian"
  "afl-persistent"
  "alcotest"         {with-test}
  "jsonm"            {with-test}
  "crowbar"          {with-test}
  "lwt"              {with-test}
  "logs"
]

pin-depends: [
  [ "pecu.dev" "git+https://github.com/mirage/pecu.git#ce3fbfdf7d3785356bcb80e3cef3aebb05298494" ]
  [ "unstrctrd.dev" "git+https://github.com/dinosaure/unstrctrd.git#d4a378f639f5bb154a18cf9b80ac7cf937e16143" ]
]
