opam-version: "2.0"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/mrmime"
bug-reports:  "https://github.com/mirage/mrmime/issues"
dev-repo:     "git+https://github.com/mirage/mrmime.git"
doc:          "https://mirage.github.io/mrmime/"
license:      "MIT"
synopsis:     "Mr. MIME"
description:  """Parser and generator of mail in OCaml"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"             {>= "4.08.0"}
  "dune"              {>= "2.7"}
  "ke"                {>= "0.4"}
  "bstr"              {>= "0.0.3"}
  "unstrctrd"         {>= "0.3"}
  "ptime"             {>= "0.8.2"}
  "uutf"
  "rosetta"           {>= "0.3.0"}
  "ipaddr"            {>= "5.0.0"}
  "emile"             {>= "1.0"}
  "base64"            {>= "3.1.0"}
  "pecu"              {>= "0.6"}
  "prettym"           {>= "0.0.2"}
  "angstrom"          {>= "0.14.0"}
  "fpath"             {with-test}
  "hxd"               {with-test}
  "mirage-crypto-rng" {with-test & >= "2.0.0"}
  "ocplib-endian"     {with-test}
  "afl-persistent"    {with-test}
  "alcotest"          {with-test}
  "jsonm"             {with-test}
  "crowbar"           {with-test}
  "lwt"               {with-test}
  "cmdliner"          {with-test & >= "1.1.0"}
  "logs"              {with-test}
]
conflicts: [
  "result"            {< "1.5"}
]
