(executable
 (name fuzz_encoder)
 (modules fuzz_encoder)
 (libraries mrmime.encoder crowbar jsonm))

(executable
 (name fuzz_mailbox)
 (modules fuzz_mailbox)
 (libraries mrmime crowbar))

(executable
 (name fuzz_message_id)
 (modules fuzz_message_id)
 (libraries mrmime crowbar))

(executable
 (name fuzz_content_type)
 (modules fuzz_content_type)
 (libraries mrmime crowbar))

(executable
 (name fuzz_date)
 (modules fuzz_date)
 (libraries mrmime crowbar))

(alias
 (name runtest)
 (deps (:fuzz_encoder fuzz_encoder.exe))
 (action (run %{fuzz_encoder})))

(alias
 (name runtest)
 (deps (:fuzz_message_id fuzz_message_id.exe))
 (action (run %{fuzz_message_id})))

(alias
 (name runtest)
 (deps (:fuzz_mailbox fuzz_mailbox.exe))
 (action (run %{fuzz_mailbox})))

(alias
 (name runtest)
 (deps (:fuzz_content_type fuzz_content_type.exe))
 (action (run %{fuzz_content_type})))

