(library
 (name common)
 (public_name mrmime.fuzz.common)
 (modules common)
 (libraries mrmime crowbar))

(executable
 (name fuzz_encoder)
 (modules fuzz_encoder)
 (libraries mrmime.encoder mrmime.fuzz.common crowbar jsonm))

(executable
 (name fuzz_mailbox)
 (modules fuzz_mailbox)
 (libraries mrmime mrmime.fuzz.common crowbar))

(executable
 (name fuzz_message_id)
 (modules fuzz_message_id)
 (libraries mrmime mrmime.fuzz.common crowbar))

(executable
 (name fuzz_content_type)
 (modules fuzz_content_type)
 (libraries mrmime mrmime.fuzz.common crowbar))

(executable
 (name fuzz_date)
 (modules fuzz_date)
 (libraries mrmime mrmime.fuzz.common crowbar))

(alias
 (name runtest)
 (deps (:fuzz_encoder fuzz_encoder.exe))
 (action (run %{fuzz_encoder})))

(alias
 (name runtest)
 (deps (:fuzz_message_id fuzz_message_id.exe))
 (action (run %{fuzz_message_id})))

(alias
 (name runtest)
 (deps (:fuzz_mailbox fuzz_mailbox.exe))
 (action (run %{fuzz_mailbox})))

(alias
 (name runtest)
 (deps (:fuzz_content_type fuzz_content_type.exe))
 (action (run %{fuzz_content_type})))

