(library
 (name mrmime)
 (public_name mrmime)
 (modules content_type
          content_encoding
	  encoded_word
	  date
	  address
	  mailbox
	  group
	  messageID
	  field
	  field_name
	  unstructured
	  header
	  mail
	  b64 quoted_printable
	  iana
	  location option peano
	  hd mt
	  rfc2046
	  mrmime)
 (libraries unstrctrd unstrctrd.parser
	    ptime ipaddr
	    base64 base64.rfc2045 pecu
	    emile rosetta
	    prettym rresult fmt angstrom))
