(executable
 (name rfc2045)
 (modules rfc2045)
 (libraries alcotest mrmime))

(executable
 (name rfc2047)
 (modules rfc2047)
 (libraries alcotest mrmime))

(executable
 (name rfc5322)
 (modules rfc5322)
 (libraries alcotest mrmime))

(executable
 (name test_encoder)
 (modules test_encoder)
 (libraries fmt jsonm alcotest mrmime.encoder))

(executable
 (name obs_unstruct)
 (modules obs_unstruct)
 (libraries alcotest mrmime))

(executable
 (name date)
 (modules date)
 (libraries alcotest mrmime))

(executable
 (name message_id)
 (modules message_id)
 (libraries alcotest mrmime))

(executable
 (name mail)
 (modules mail)
 (libraries alcotest ptime.clock.os mrmime))

(alias
 (name runtest)
 (deps (:rfc2045 rfc2045.exe))
 (action (run %{rfc2045} --color=always)))

(alias
 (name runtest)
 (deps (:rfc2047 rfc2047.exe))
 (action (run %{rfc2047} --color=always)))

(alias
 (name runtest)
 (deps (:rfc5322 rfc5322.exe))
 (action (run %{rfc5322} --color=always)))
 
(alias
 (name runtest)
 (deps (:test_encoder test_encoder.exe))
 (action (run %{test_encoder} --color=always)))

(alias
 (name runtest)
 (deps (:obs_unstruct obs_unstruct.exe))
 (action (run %{obs_unstruct} --color=always)))

(alias
 (name runtest)
 (deps (:date date.exe))
 (action (run %{date} --color=always)))

(alias
 (name runtest)
 (deps (:message_id message_id.exe))
 (action (run %{message_id} --color=always)))

(alias
 (name runtest)
 (deps (:mail mail.exe))
 (action (run %{mail} --color=always)))
