(executable
 (name test_header)
 (modules test_header)
 (libraries alcotest mrmime))

(executable
 (name rfc2045)
 (modules rfc2045)
 (libraries alcotest mrmime))

(executable
 (name rfc2047)
 (modules rfc2047)
 (libraries alcotest mrmime))

(executable
 (name rfc5322)
 (modules rfc5322)
 (libraries alcotest mrmime))

(executable
 (name test_date)
 (modules test_date)
 (libraries alcotest mrmime))

(executable
 (name test_message_id)
 (modules test_message_id)
 (libraries alcotest mrmime))

(executable
 (name test_mail)
 (modules test_mail)
 (libraries alcotest ptime.clock.os mrmime))

(executable
 (name test_hd)
 (modules test_hd)
 (libraries alcotest mrmime))

(executable
 (name test_stream)
 (modules test_stream)
 (libraries logs logs.fmt fmt.tty lwt lwt.unix mrmime))

(executable
 (name test_generate)
 (modules test_generate)
 (libraries base64 mrmime))

(cram
 (deps test_generate.exe test_stream.exe))

(rule
 (alias runtest)
 (deps
  (:rfc2045 rfc2045.exe))
 (action
  (run %{rfc2045} --color=always)))

(rule
 (alias runtest)
 (deps
  (:rfc2047 rfc2047.exe))
 (action
  (run %{rfc2047} --color=always)))

(rule
 (alias runtest)
 (deps
  (:rfc5322 rfc5322.exe))
 (action
  (run %{rfc5322} --color=always)))

(rule
 (alias runtest)
 (deps
  (:date test_date.exe))
 (action
  (run %{date} --color=always)))

(rule
 (alias runtest)
 (deps
  (:message_id test_message_id.exe))
 (action
  (run %{message_id} --color=always)))

(rule
 (alias runtest)
 (deps
  (:mail test_mail.exe))
 (action
  (run %{mail} --color=always)))

(rule
 (alias runtest)
 (deps
  (:hd test_hd.exe))
 (action
  (run %{hd} --color=always)))

(rule
 (alias runtest)
 (deps
  (:header test_header.exe))
 (action
  (run %{header} --color=always)))
